# sandbox_fastapi

./: .env_sample  .gitignore  Dockerfile  docker-compose.yml  generate-index.sh  index.html  readme.md
.github/workflows/: build-docs.yml  build-version.yml  delete-version.yml  docker-publish.yml  generate-index.yml  redoc-build.yml  security-scan.yml
app/: .env_dev  .gitignore
app/docker/dev/: Dockerfile
app/docker/release/: Dockerfile
app/volume/: build_redoc.py  migrate.py  pyproject.toml
app/volume/app/: main.py
branches/main/htmlcov/: class_index.html  function_index.html  index.html  z_012b74700184a84f___init___py.html  (+11 more)
docker/release/: Dockerfile
docs/: .gitignore  index.md
docs/volume/: mkdocs.yml  pyproject.toml  schemaspy.properties
docs/volume/docs/: index.md
docs/volume/manual/: chapter1.md  chapter2.md
main/htmlcov/: class_index.html  function_index.html  index.html  z_012b74700184a84f___init___py.html  z_012b74700184a84f_router_py.html  z_0e6cd4e67ff24a9e___init___py.html  z_0e6cd4e67ff24a9e_get_health_py.html  z_0e6cd4e67ff24a9e_router_py.html  z_5f5a17c013354698_main_py.html  z_642945b39557af29___init___py.html  z_642945b39557af29_user_repository_py.html  z_8321cdec602088c6___init___py.html  z_8321cdec602088c6_get_user_py.html  z_8321cdec602088c6_router_py.html  z_90bdfa917c6a6771_db_py.html
shells/: build.sh  migrate.sh  release.sh  test.sh
versions/tmp/: hogehoge.md
volume/: migrate.py  pyproject.toml
volume/app/: main.py
volume/app/endpoint/: router.py
volume/app/endpoint/health/: __init__.py  get_health.py
volume/app/endpoint/user/: get_user.py
volume/app/infrastructure/database/: db.py
volume/migrations/models/: t_user.py
volume/migrations/models/base/: base_table.py
volume/tests/presentation/: test_health.py  test_user.py
(+167 files in other folders)
