[tool.poetry]
name = "volume"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ollama = "^0.4.8"
fastapi = "^0.115.12"
gradio = "^5.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
