[tool.poetry]
name = "volume"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
mkdocs = "^1.6.1"
mkdocs-material = "^9.6.14"
plantuml-markdown = "^3.11.1"
python-markdown-math = "^0.9"
pygments = "^2.19.1"
pymdown-extensions = "^10.15"
mkdocs-awesome-pages-plugin = "^2.10.1"
mkdocs-autolinks-plugin = "^0.7.1"
mkdocs-macros-plugin = "^1.3.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

